<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nglaw.xmlparker.post_activity">

    <EditText
        android:id="@+id/addressBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/cityBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/addressBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/zipBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/cityBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



    <EditText
        android:id="@+id/dayAvailableBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/zipBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/startTimeBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"

        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/dayAvailableBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/endTimeBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/startTimeBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/priceBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/endTimeBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



    <TextView
        android:id="@+id/addressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Address"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/addressBox"
        app:layout_constraintBottom_toBottomOf="@+id/addressBox"
        app:layout_constraintTop_toTopOf="@+id/addressBox" />

    <TextView
        android:id="@+id/cityText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="City"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/cityBox"
        app:layout_constraintBottom_toBottomOf="@+id/cityBox"
        app:layout_constraintTop_toTopOf="@+id/cityBox" />

    <TextView
        android:id="@+id/zipText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zip Code"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/zipBox"
        app:layout_constraintBottom_toBottomOf="@+id/zipBox"
        app:layout_constraintTop_toTopOf="@+id/zipBox" />

    <TextView
        android:id="@+id/dateAvailableText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day Available MM/DD/YY"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/dayAvailableBox"
        app:layout_constraintBottom_toBottomOf="@+id/dayAvailableBox"
        app:layout_constraintTop_toTopOf="@+id/dayAvailableBox" />

    <TextView
        android:id="@+id/startTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start (hh:mm am/pm)"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/startTimeBox"
        app:layout_constraintBottom_toBottomOf="@+id/startTimeBox"
        app:layout_constraintTop_toTopOf="@+id/startTimeBox" />

    <TextView
        android:id="@+id/endTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="End (hh:mm am/pm)"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/endTimeBox"
        app:layout_constraintBottom_toBottomOf="@+id/endTimeBox"
        app:layout_constraintTop_toTopOf="@+id/endTimeBox"
        />

    <TextView
        android:id="@+id/priceText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="price (ex:5.00)"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/priceBox"
        app:layout_constraintBottom_toBottomOf="@+id/priceBox"
        app:layout_constraintTop_toTopOf="@+id/priceBox"

        />
    <EditText
        android:id="@+id/contactBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/priceBox"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/contactText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(###)###-####"
        android:layout_marginLeft="5dp"
        app:layout_constraintLeft_toLeftOf="@id/contactBox"
        app:layout_constraintBottom_toBottomOf="@+id/contactBox"
        app:layout_constraintTop_toTopOf="@+id/contactBox"

        />

    <Button
        android:id="@+id/postButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/contactBox"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</android.support.constraint.ConstraintLayout>
